# HTTPWebServer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
benchmarks/: command.txt
benchmarks/multiThreaded/: big_html.txt  big_php.txt  big_php_with_fpm.txt  small_html.txt  small_php.txt  small_php_with_fpm.txt
benchmarks/singleThreaded/: big_html.txt  big_php.txt  big_php_with_fpm.txt  small_html.txt  small_php.txt  small_php_with_fpm.txt
public/: big.html  big.php  index.css  index.js  second.html  small.html  small.php
scripts/: build.sh  rebuild.sh  run.sh
src/: CMakeLists.txt  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  config.h  helper.cpp  helper.h  index.html  index.php  input.txt  main.cpp  output.txt  serverSocket.cpp  serverSocket.h  threadPool.h
